# IPAnalyzer

./: .gitignore  COMPLETION_CHECKLIST.md  DEVELOPMENT_GUIDE.md  EXECUTIVE_SUMMARY.md  FEATURES_IMPLEMENTATION_SUMMARY.md  FUTURE_FEATURES.md  IMPLEMENTATION_COMPLETE.txt  MANIFEST.md  PHASE2_COMPLETE.txt  PHASE2_COMPLETION.txt  PHASE2_FINAL_REPORT.txt  PHASE2_IMPLEMENTATION_REPORT.md  PHASE2_QUICK_REFERENCE.py  PHASE2_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  START_HERE.md  STRUCTURE.md  config.py  examples.py  ipanalyzer_cli.py  pyproject.toml  requirements.txt  test_phase2_modules.py  tests.py
.github/workflows/: ci.yml
ipanalyzer/: __init__.py
ipanalyzer/data/: blacklist.txt  geoip_db.csv
ipanalyzer/gui/: __init__.py  desktop_app.py
ipanalyzer/modules/: __init__.py  bgp_analyzer.py  dns_bulk_processor.py  geoip_analyzer.py  ip_range_analyzer.py  ip_utils.py  network_scanner.py  report_generator.py  threat_intelligence.py  whois_analyzer.py
ipanalyzer/plugins/: __init__.py  example_plugin.py  plugin_manager.py
ipanalyzer/storage/: __init__.py  database_manager.py
tests/: test_basic.py  test_more.py
