[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipanalyzer"
version = "2.5.0"
description = "IPAnalyzer - network and IP analysis toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MrAmirRezaie", email = ""}
]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MrAmirRezaie/IPAnalyzer"
Repository = "https://github.com/MrAmirRezaie/IPAnalyzer"

[project.scripts]
ipanalyzer = "ipanalyzer_cli:main"
